feat(questions): passed details through to inquirer

--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "rollup-plugin-auto-external": "^2.0.0",
     "sinon": "^7.5.0",
     "travis-lint": "^1.0.0"
+  },
+  "dependencies": {
+    "inquirer": "^7.0.3"
   }
 }
