--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,1 +1,1 @@
-{"ui":"tdd","require":["@babel/register","./test/mocha-setup.js"],"recursive":true}
+{"ui":"tdd","require":["@babel/register","./test/mocha-setup.js"]}
