--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lint:lockfile": "lockfile-lint --path package-lock.json --type npm --validate-https --allowed-hosts npm",
     "lint:js": "eslint . --cache",
     "lint:md": "remark . --frail",
+    "generate:md": "remark . --output",
+    "pregenerate:md": "npm run build",
     "lint:sensitive": "ban",
     "lint:travis": "travis-lint .travis.yml",
     "clean": "rimraf ./lib",
@@ -51,6 +53,8 @@
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
     "remark-cli": "9.0.0",
+    "remark-toc": "7.0.0",
+    "remark-usage": "9.0.0",
     "rimraf": "3.0.2",
     "rollup": "2.34.2",
     "rollup-plugin-auto-external": "2.0.0",
