--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "npm-run-all --print-label --parallel lint:* --parallel test:*",
     "lint:lockfile": "lockfile-lint --path package-lock.json --type npm --validate-https --allowed-hosts npm",
     "lint:js": "eslint . --cache",
+    "prelint:md": "npm run build",
     "lint:md": "remark . --frail",
     "lint:peer": "npm ls >/dev/null",
     "generate:md": "remark . --output",
