chore(husky): upgraded the config to match the installed version

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "prepack": "run-s build",
     "test:unit": "nyc run-s test:unit:base",
     "test:unit:base": "DEBUG=any mocha 'src/**/*-test.js'",
-    "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
+    "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/register": "7.15.3",
