--- a/package.json
+++ b/package.json
@@ -3,19 +3,13 @@
   "description": "Inquirer prompts that can be overriden with provided answers",
   "license": "MIT",
   "version": "0.0.0-semantically-released",
-  "main": "lib/index.cjs.js",
-  "module": "lib/index.es.js",
-  "sideEffects": false,
-  "files": [
-    "lib/"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "author": "Matt Travi <npm@travi.org> (https://matt.travi.org/)",
   "repository": "form8ion/overridable-prompts",
   "bugs": "https://github.com/form8ion/overridable-prompts/issues",
   "homepage": "https://npm.im/@form8ion/overridable-prompts",
-  "author": "Matt Travi <npm@travi.org> (https://matt.travi.org/)",
+  "main": "lib/index.cjs.js",
+  "module": "lib/index.es.js",
+  "sideEffects": false,
   "scripts": {
     "test": "npm-run-all --print-label --parallel lint:* --parallel test:*",
     "lint:lockfile": "lockfile-lint --path package-lock.json --type npm --validate-https --allowed-hosts npm",
@@ -32,10 +26,18 @@
     "build:js": "rollup --config",
     "watch": "run-s 'build:js -- --watch'",
     "prepack": "run-s build",
-    "test:unit": "nyc run-s test:unit:base",
+    "test:unit": "cross-env NODE_ENV=test c8 run-s test:unit:base",
     "test:unit:base": "DEBUG=any mocha 'src/**/*-test.js'",
-    "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "prepare": "husky install"
+  },
+  "files": [
+    "lib/"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "dependencies": {
+    "inquirer": "^8.0.0"
   },
   "devDependencies": {
     "@babel/register": "7.18.9",
@@ -46,14 +48,14 @@
     "@form8ion/remark-lint-preset": "4.0.2",
     "@travi/any": "2.1.6",
     "ban-sensitive-files": "1.9.18",
+    "c8": "7.12.0",
     "chai": "4.3.6",
-    "codecov": "3.8.3",
+    "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
     "husky": "8.0.1",
     "lockfile-lint": "4.9.6",
     "mocha": "10.1.0",
     "npm-run-all": "4.1.5",
-    "nyc": "15.1.0",
     "remark-cli": "11.0.0",
     "remark-toc": "8.0.1",
     "remark-usage": "10.0.1",
@@ -61,8 +63,5 @@
     "rollup": "3.2.5",
     "rollup-plugin-auto-external": "2.0.0",
     "sinon": "14.0.1"
-  },
-  "dependencies": {
-    "inquirer": "^8.0.0"
   }
 }
